# FilinGPT

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: chat.py
core/: infer.py  model.py  run_train.py  train.py  utils.py
data/artifacts/: filingpt_mlp_baseline_v1.history.json  filingpt_mlp_baseline_v1.npz  filingpt_mlp_financial_v1.json  filingpt_mlp_financial_v1.npz
data/gold/: amazon_2022_10k__mda.txt  apple_2023_10k__mda.txt  microsoft_2023_10k__mda.txt
data/silver/: amazon_2022_10k__10k.txt  apple_2023_10k__10k.txt  microsoft_2023_10k__10k.txt
data/training/: batches.jsonl  chunks.jsonl  manifest.jsonl  samples.jsonl  tokens.jsonl
etl/: 00_test_bronze.py  01_extract_10k.py  02_test_10k.py  03_extract_mda.py  04_test_mda.py
prep/: 00_build_dataset.py  01_test_dataset.py  02_chunk_dataset.py  03_test_chunks.py  04_tokenize_chunks.py  05_test_tokens.py  06_build_batches.py  07_test_batches.py
reports/: metrics.json  metrics.md
scripts/: 00_reset.sh  01_bronze_loader.sh  02_run_etl.sh  03_run_prep.sh  04_make_compare_report.py
